Closed
Bug 310101
Opened 20 years ago
Closed 20 years ago
Assertion failure (nsDirPrefs) when attempting to change a ldap attribute map pref in about:config with address book open.
Categories
(MailNews Core :: LDAP Integration, defect)
MailNews Core
LDAP Integration
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: standard8, Assigned: standard8)
Details
(Keywords: regression)
Attachments
(1 file)
|
3.53 KB,
patch
|
dmosedale
:
review+
dmosedale
:
superreview+
|
Details | Diff | Splinter Review |
Seen on:
Assertion failure: rc != idNone, at
/opt/mozmaster/mozilla/mailnews/addrbook/src/nsDirPrefs.cpp:1484
Only occurs on Debug builds (its an assertion).
The recent ldap attribute map changes have caused this to occur. When one of the
prefs is changed, it fires a callback into nsDirPrefs.cpp, nsDirPrefs.cpp
unfortunately hardcodes all the pref names, and therefore, rc = idNone in
DIR_AtomizePrefName when it returns.
| Assignee | ||
Comment 1•20 years ago
|
||
Though we could really do with re-writing the function and nsDirPrefs, this
patch causes the *.attrmap.* prefs to be recongnised & therefore it will no
longer assert.
Attachment #197474 -
Flags: superreview?(dmose)
Attachment #197474 -
Flags: review?(dmose)
Comment 2•20 years ago
|
||
Comment on attachment 197474 [details] [diff] [review]
a fix.
r+sr=dmose
Attachment #197474 -
Flags: superreview?(dmose)
Attachment #197474 -
Flags: superreview+
Attachment #197474 -
Flags: review?(dmose)
Attachment #197474 -
Flags: review+
| Assignee | ||
Comment 3•20 years ago
|
||
I checked this in earlier.
/cvsroot/mozilla/mailnews/addrbook/src/nsDirPrefs.h,v <-- nsDirPrefs.h
new revision: 1.30; previous revision: 1.29
done
Checking in mailnews/addrbook/src/nsDirPrefs.cpp;
/cvsroot/mozilla/mailnews/addrbook/src/nsDirPrefs.cpp,v <-- nsDirPrefs.cpp
new revision: 1.99; previous revision: 1.98
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Updated•20 years ago
|
QA Contact: grylchan → stephen.donner
Comment 4•20 years ago
|
||
Verified FIXED with a semi-current, debug trunk build under Windows XP.
No asserts...
checkout start: Fri Jan 13 23:08:33 USEST 2006
cvs checkout:
Status: RESOLVED → VERIFIED
Updated•17 years ago
|
Product: Core → MailNews Core
Updated•17 years ago
|
QA Contact: stephen.donner → ldap-integration
You need to log in
before you can comment on or make changes to this bug.
Description
•