Fix bug 310101 Assertion failure (nsDirPrefs) when attempting to change a ldap attribute map pref in about:config with address book open (debug builds only) r/sr=dmose